--- a/project.html
+++ b/project.html
@@ -197,7 +197,7 @@
           <div class="carousel-item active ">
             <img
               src="https://themewagon.github.io/Travisa/img/carousel-1.jpg"
-              class="img-fluid "
+              class="img-fluid update"
               alt="Image"
             />
             <div class="carousel-caption tt">
@@ -233,9 +233,9 @@
           </div>
           <div class="carousel-item">
             <img
-              src="../carousel-2_filtered_via_10015_io.png"
-              class="img-fluid"
-              alt="Image"
+              src="https://themewagon.github.io/Travisa/img/carousel-2.jpg"
+              class="img-fluid update"
+              alt="Image "
             />
             <div class="carousel-caption">
               <div class="text-center p-4" style="max-width: 900px">
@@ -678,7 +678,7 @@
             <div class="col-md-3 wow fadeInUp" data-wow-delay="0.1s">
               <div class="feature-item text-center p-4 bgw">
                 <div class="feature-icon p-3 mb-4 ture">
-                  <i class="fas fa-dollar-sign fa-4x text-primary feature "></i>
+                  <i class="fas fa-dollar-sign fa-4x text-primary feature"></i>
                 </div>
                 <div class="feature-content d-flex flex-column">
                   <h5 class="mb-3 cost">Cost-Effective</h5>
