--- a/project.html
+++ b/project.html
@@ -200,7 +200,7 @@
               class="img-fluid update"
               alt="Image"
             />
-            <div class="carousel-caption tt">
+            <div class="carousel-caption  category">
               <div class="text-center p-4" style="max-width: 900px">
                 <h4
                   class="text-white text-uppercase fw-bold mb-3 mb-md-4 wow fadeInUp "
@@ -237,7 +237,7 @@
               class="img-fluid update"
               alt="Image "
             />
-            <div class="carousel-caption">
+            <div class="carousel-caption category1">
               <div class="text-center p-4" style="max-width: 900px">
                 <h5
                   class="text-white text-uppercase fw-bold mb-3 mb-md-4 wow fadeInUp imgtext"
@@ -424,7 +424,7 @@
         </div>
 
         <div class="col-12 col-sm-12 col-md-6 col-xl-3">
-          <div class="category">
+          <div class="category1">
             <div class="iconbg"><i class="fas fa-users icon"></i></div>
             <div class="semi">
               <div class="name">Team Members</div>
@@ -434,7 +434,7 @@
         </div>
 
         <div class="col-12 col-sm-12 col-md-6 col-xl-3">
-          <div class="category">
+          <div class="category2">
             <div class="iconbg"><i class="fas fa-user-check icon"></i></div>
             <div class="semi">
               <div class="name">Visa Process</div>
@@ -444,7 +444,7 @@
         </div>
 
         <div class="col-12 col-sm-12 col-md-6 col-xl-3">
-          <div class="category">
+          <div class="category3">
             <div class="iconbg"><i class="fas fa-handshake icon"></i></div>
             <div class="semi">
               <div class="name">Success Rates</div>
@@ -486,7 +486,7 @@
         <div class="container">
           <div class="row row2">
             <div class="col-sm-12 col-12 col-md-4 col-lg-4">
-              <div class="container">
+              <div class="container category">
                 <div class="img-container">
                   <img
                     src="https://themewagon.github.io/Travisa/img/service-1.jpg"
@@ -513,7 +513,7 @@
             </div>
 
             <div class="col-sm-12 col-12 col-md-4 col-lg-4">
-              <div class="container">
+              <div class="container category1">
                 <div class="img-container">
                   <img
                     src="https://themewagon.github.io/Travisa/img/service-2.jpg"
@@ -537,7 +537,7 @@
               </div>
             </div>
             <div class="col-sm-12 col-12 col-md-4 col-lg-4">
-              <div class="container">
+              <div class="container category2">
                 <div class="img-container">
                   <img
                     src="https://themewagon.github.io/Travisa/img/service-3.jpg"
@@ -566,7 +566,7 @@
           <div class="container my-5">
             <div class="row row2">
               <div class="col-sm-12 col-12 col-md-4 col-lg-4">
-                <div class="container">
+                <div class="container category3">
                   <div class="img-container">
                     <img
                       src="https://themewagon.github.io/Travisa/img/service-1.jpg"
@@ -591,7 +591,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-12 col-md-4 col-lg-4">
-                <div class="container">
+                <div class="container category4">
                   <div class="img-container">
                     <img
                       src="https://themewagon.github.io/Travisa/img/service-2.jpg"
@@ -616,7 +616,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-12 col-md-4 col-lg-4">
-                <div class="container">
+                <div class="container category5">
                   <div class="img-container">
                     <img
                       src="https://themewagon.github.io/Travisa/img/service-3.jpg"
@@ -675,7 +675,7 @@
 
         <div class="container ">
           <div class="row g-4 fex justify-content-center text-center">
-            <div class="col-md-3 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="col-md-3 wow fadeInUp category" data-wow-delay="0.1s">
               <div class="feature-item text-center p-4 bgw">
                 <div class="feature-icon p-3 mb-4 ture">
                   <i class="fas fa-dollar-sign fa-4x text-primary feature"></i>
@@ -693,7 +693,7 @@
               </div>
             </div>
 
-            <div class="col-md-3 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="col-md-3 wow fadeInUp category1" data-wow-delay="0.3s">
               <div class="feature-item text-center p-4 bgw">
                 <div class="feature-icon p-3 mb-4 ture">
                   <i class="fas fa-globe fa-4x text-primary"></i>
@@ -710,7 +710,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="col-md-3 wow fadeInUp category2" data-wow-delay="0.5s">
               <div class="feature-item text-center p-4 bgw">
                 <div class="feature-icon p-3 mb-4 ture">
                   <i class="fas fa-atlas fa-4x text-primary"></i>
@@ -727,7 +727,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 wow fadeInUp" data-wow-delay="0.7s">
+            <div class="col-md-3 wow fadeInUp category3" data-wow-delay="0.7s">
               <div class="feature-item text-center p-4 bgw">
                 <div class="feature-icon p-3 mb-4 ture ">
                   <i class="fas fa-users fa-4x text-primary"></i>
@@ -787,7 +787,7 @@
 
         <div class="row g-4 text-center">
           <div
-            class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp"
+            class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp category"
             data-wow-delay="0.1s"
           >
             <div class="country-item bg1">
@@ -811,7 +811,7 @@
             </div>
           </div>
           <div
-            class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp"
+            class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp category1"
             data-wow-delay="0.1s"
           >
             <div class="country-item bg1">
@@ -835,7 +835,7 @@
             </div>
           </div>
           <div
-            class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp"
+            class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp category2"
             data-wow-delay="0.1s"
           >
             <div class="country-item bg1">
@@ -859,7 +859,7 @@
             </div>
           </div>
           <div
-            class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp"
+            class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp category3"
             data-wow-delay="0.1s"
           >
             <div class="country-item bg1">
@@ -905,7 +905,7 @@
     <div class="container-fluid testimonial overflow-hidden pb-5">
       <div class="container py-5">
         <div
-          class="section-title text-center mb-5 wow fadeInUp"
+          class="section-title text-center mb-5 wow fadeInUp "
           data-wow-delay="0.1s"
         >
           <div class="sub-style">
@@ -921,10 +921,10 @@
         </div>
 
         <div
-          class="owl-carousel testimonial-carousel tm wow zoomInDown d-flex"
+          class="owl-carousel testimonial-carousel tm wow zoomInDown d-flex "
           data-wow-delay="0.2s"
         >
-          <div class="testimonial-item  ">
+          <div class="testimonial-item  category">
             <div class="testimonial-content p-4 mb-5 ">
               <p class="fs-5 mb-0">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -957,7 +957,7 @@
               </div>
             </div>
           </div>
-          <div class="testimonial-item">
+          <div class="testimonial-item category1">
             <div class="testimonial-content p-4 mb-5">
               <p class="fs-5 mb-0">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -990,7 +990,7 @@
               </div>
             </div>
           </div>
-          <div class="testimonial-item">
+          <div class="testimonial-item category2">
             <div class="testimonial-content p-4 mb-5">
               <p class="fs-5 mb-0">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -1054,7 +1054,7 @@
           </p>
         </div>
         <div class="row mt-5 mtring">
-          <div class="col-sm-12 col-12 col-md-3 col-lg-3">
+          <div class="col-sm-12 col-12 col-md-3 col-lg-3 category">
             <div class="container1">
               <div class="img-container1">
                 <img
@@ -1085,7 +1085,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-12 col-md-3 col-lg-3">
+          <div class="col-sm-12 col-12 col-md-3 col-lg-3 category1">
             <div class="container1">
               <div class="img-container1">
                 <img
@@ -1116,7 +1116,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-12 col-md-3 col-lg-3">
+          <div class="col-sm-12 col-12 col-md-3 col-lg-3 category2">
             <div class="container1">
               <div class="img-container1">
                 <img
@@ -1147,7 +1147,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-12 col-md-3 col-lg-3">
+          <div class="col-sm-12 col-12 col-md-3 col-lg-3 category3">
             <div class="container1">
               <div class="img-container1">
                 <img
@@ -1214,7 +1214,7 @@
       <div class="container pb-5">
         <div class="office pt-0">
           <div
-            class="section-title text-center mb-5 wow fadeInUp"
+            class="section-title text-center mb-5 wow fadeInUp "
             data-wow-delay="0.1s"
           >
             <div class="sub-style">
@@ -1233,7 +1233,7 @@
 
           <div class="row g-4 justify-content-center">
             <div
-              class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+              class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp category"
               data-wow-delay="0.1s"
             >
               <div class="office-item p-4 bg3">
@@ -1258,7 +1258,7 @@
               </div>
             </div>
             <div
-              class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+              class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp category1"
               data-wow-delay="0.1s"
             >
               <div class="office-item p-4 bg3">
@@ -1283,7 +1283,7 @@
               </div>
             </div>
             <div
-              class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+              class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp category2"
               data-wow-delay="0.1s"
             >
               <div class="office-item p-4 bg3">
@@ -1308,7 +1308,7 @@
               </div>
             </div>
             <div
-              class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+              class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp category3"
               data-wow-delay="0.1s"
             >
               <div class="office-item p-4 bg3">
