--- a/project.html
+++ b/project.html
@@ -99,7 +99,7 @@
             aria-controls="navbarNavDropdown"
             aria-expanded="false"
             aria-label="Toggle navigation"
-            style="margin-left: 100% !important;"
+            style="margin-left: 70% !important;"
           >
             <span class="navbar-toggler-icon me-0"></span>
           </button> 
@@ -1451,7 +1451,7 @@
     <div class="container5 copyright w-100">
       <div class="container2">
         <div
-          class="d-flex py-3 px-2 justify-content-between align-items-center w-100"
+          class="d-flex py-3 px-2 justify-content-between align-items-center w-100 end"
         >
           <div class="text-center text-md-start">
             <span class="text-white"
