--- a/project.html
+++ b/project.html
@@ -8,21 +8,13 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome-all.min.css" />
     <link rel="stylesheet" href="js.js">
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
       integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
-    />
+      referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
   </head>
 
   <body>
@@ -77,6 +69,9 @@
       </div>
     </div>
 
+
+
+
     <!-- NAV BAR START -->
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary fix">
@@ -125,7 +120,7 @@
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
-                role="button"
+                role="butto"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
@@ -274,22 +269,24 @@
           type="button"
           data-bs-target="#carouselId"
           data-bs-slide="prev"
+          style="z-index: 0;"
         >
           <span
-            class="carousel-control-prev-icon bg-secondary wow fadeInLeft"
+            class="carousel-control-prev-icon bg-primary wow fadeInLeft"
             data-wow-delay="0.2s"
             aria-hidden="false"
           ></span>
           <span class="visually-hidden-focusable">Previous</span>
         </button>
         <button
-          class="carousel-control-next"
+          class="carousel-control-next "
           type="button"
           data-bs-target="#carouselId"
           data-bs-slide="next"
+          style="z-index: 0;"
         >
           <span
-            class="carousel-control-next-icon bg-secondary wow fadeInRight"
+            class="carousel-control-next-icon bg-primary wow fadeInRight"
             data-wow-delay="0.2s"
             aria-hidden="false"
           ></span>
@@ -544,7 +541,7 @@
                     alt=""
                     class="imgdiv"
                   />
-                  <p class="job-title">DeplometicVisa</p>
+                  <p class="job-title">Deplometic Visa</p>
                   <div class="overlay">
                     <div class="tex">
                       <p class="jobs">Deplometic Visa</p>
@@ -1476,6 +1473,11 @@
     </div>
 
     <a href="#" class="top1"><i class="fa fa-arrow-up"></i></a>
+
+
+
+
+    
 
 
 
