--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome-all.min.css" />
-    <link rel="stylesheet" href="js.js">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -106,15 +105,15 @@
         >
           <ul class="navbar-nav gap-4 mb-3 align-items-start mt-3">
             <li class="nav-item">
-              <a class="nav-link active text-info" aria-current="page" href="https://themewagon.github.io/Travisa/index.html"
+              <a class="nav-link active text-info" aria-current="page" href="#"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://themewagon.github.io/Travisa/about.html">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://themewagon.github.io/Travisa/service.html">Service</a>
+              <a class="nav-link" href="#service">Service</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -134,7 +133,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://themewagon.github.io/Travisa/contact.html">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
               <i
@@ -151,7 +150,7 @@
 
             <li class="nav-item">
               <a
-                href="https://themewagon.github.io/Travisa/index.html"
+                href="#"
                 style="text-decoration: none"
               >
                 <span
@@ -300,7 +299,7 @@
 
     <!-- ABOUT START -->
 
-    <div class="container-fluid py-5">
+    <div class="container-fluid py-5" id="about">
       <div class="container py-5">
         <div class="row g-5 rr">
           <div class="col-xl-5 animated-slide-in-left">
@@ -459,7 +458,7 @@
 
 <!-- VISA CATEGORIES START -->
 
-    <div class="container-fluid service overflow-hidden pt-5">
+    <div class="container-fluid service overflow-hidden pt-5" id="service">
       <div class="container py-5">
         <div
           class="section-title text-center mb-5 wow fadeInUp"
@@ -1344,7 +1343,7 @@
     <!-- footer -->
     <footer>
       <div
-        class="container-fluid footer py-5 wow fadeIn cont"
+        class="container-fluid footer py-5 wow fadeIn cont" id="contact"
         data-wow-delay="0.2s"
       >
         <div class="container py-4">
